name:                kopaste
version:             0.1.0.0
homepage:            https://github.com/koto-bank/kopaste
license:             BSD2
license-file:        LICENSE
author:              vaartis
maintainer:          vaartis@cock.li
copyright:           2017 vaartis
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

executable kopaste
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , happstack-server >= 7.3.6
                     , blaze-html >= 0.9.0.1
                     , clay >= 0.12.2
                     , text >= 1.2.2.2
                     , directory  >= 1.3.0.0
                     , random-strings >= 0.1.1.0
                     , transformers >= 0.3.0.0
                     , time >= 1.6.0.1
  default-language:    Haskell2010
  other-modules:       Pages
                     , HighlightThemes.Dracula

source-repository head
  type:     git
  location: https://github.com/koto-bank/kopaste
